feat: write-fullfilled-requests-to-google-sheets

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,28 @@
 # airtable
 BAM_AIRTABLE_TOKEN=""
-BAM_AIRTABLE_BASE_ID="app0XZ0Z0Z0Z0Z0Z0"
+BAM_AIRTABLE_BASE_ID=""
+BAM_AIRTABLE_ASSISTANCE_REQUESTS_TABLE_ID=""
+BAM_ESSENTIAL_GOODS_DONATIONS_TABLE_ID=""
+BAM_VOLUNTEERS_TABLE_ID=""
 
 # mailjet
 BAM_MAILJET_API_KEY=""
 BAM_MAILJET_API_SECRET=""
 
+# google
+BAM_GOOGLE_MAPS_API_KEY=""
+BAM_GOOGLE_SERVICE_ACCOUNT_JSON='{}'
+
+# open collective
+BAM_OPEN_COLLECTIVE_ACCESS_TOKEN=""
+
 # s3
 BAM_DO_TOKEN=""
-BAM_S3_BASE_URL="https://nyc3.digitaloceanspaces.com"
-BAM_S3_ENDPOINT_URL="https://nyc3.digitaloceanspaces.com"
-BAM_S3_BUCKET="bam-file"
-BAM_S3_REGION_NAME="nyc3"
+BAM_S3_BASE_URL=""
+BAM_S3_ENDPOINT_URL=""
+BAM_S3_BUCKET=""
+BAM_S3_REGION_NAME=""
 BAM_S3_ACCESS_KEY_ID=""
 BAM_S3_SECRET_ACCESS_KEY=""
-BAM_S3_PLATFORM="do"
+BAM_S3_PLATFORM=""
 BAM_S3_CDN_ID=""
