--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "email-validator==2.0.0.post2",
     "charset-normalizer==3.2.0",
     "googlemaps==4.10.0",
+    "gspread==6.1.4",
 ]
 
 [build-system]
