--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           pip install -r requirements-dev.txt
       - name: Populate .env file
         run: |
-          printf "${{ secrets.BAM_ENV_FILE_CONTENTS }}" > ./.env
+          echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" | base64 -d > ./.env
       - name: Run core tests
         run: |
           pip install .
