--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install -r requirements-dev.txt
+      - name: Populate .env file
+        run: |
+          echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" | base64 -d > ./.env
       - name: Run core tests
         run: |
           pip install .
@@ -28,7 +31,6 @@ jobs:
           pip install -r requirements.txt
           pytest -vv .
         working-directory: ./app
-
   deploy:
     runs-on: ubuntu-latest
     needs: test
