Start of App Models; Refactor functions to use parameter class and record log output

--- a/functions/project.yml
+++ b/functions/project.yml
@@ -7,8 +7,7 @@ environment:
   BAM_MAILJET_API_KEY: "${BAM_MAILJET_API_KEY}"
   BAM_MAILJET_API_SECRET: "${BAM_MAILJET_API_SECRET}"
   BAM_GOOGLE_MAPS_API_KEY: "${BAM_GOOGLE_MAPS_API_KEY}"
-  BAM_GOOGLE_SERVICE_ACCOUNT_JSON: |
-    ${BAM_GOOGLE_SERVICE_ACCOUNT_JSON}
+  BAM_GOOGLE_SERVICE_ACCOUNT_JSON_BASE64: "${BAM_GOOGLE_SERVICE_ACCOUNT_JSON_BASE64}"
   BAM_OPEN_COLLECTIVE_ACCESS_TOKEN: "${BAM_OPEN_COLLECTIVE_ACCESS_TOKEN}"
   BAM_DO_TOKEN: "${BAM_DO_TOKEN}"
   BAM_S3_BASE_URL: "https://nyc3.digitaloceanspaces.com"
