--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           pip install -r requirements-dev.txt
       - name: Populate .env file
         run: |
-          echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" | base64 -d > ./.env
+          echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" > ./.env
       - name: Run core tests
         run: |
           pip install .
@@ -48,7 +48,7 @@ jobs:
         token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     - name: Populate .env file for functions
       run: |
-        echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" | base64 -d > ./.env
+        echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" > ./.env
     - name: Install doctl serverless plugin
       run: |
         doctl serverless install
