--- a/.github/workflows/nightly-cron.yml
+++ b/.github/workflows/nightly-cron.yml
@@ -1,6 +1,12 @@
 name: Nightly cron job
 
 on:
+  workflow_dispatch:
+    inputs:
+      dry-run:
+        description: 'Run the analysis in dry-run mode'
+        required: true
+        default: 'yes'
   schedule:
     - cron: '0 5 * * *'  # Run every day at midnight ET
 
