--- a/.github/workflows/nightly-cron.yml
+++ b/.github/workflows/nightly-cron.yml
@@ -8,7 +8,7 @@ on:
         required: true
         default: 'no'
   schedule:
-    - cron: '0 5 * * *'  # Run every day at midnight ET
+    - cron: '0 4 * * *'  # Run every day at midnight ET
 
 jobs:
   cron:
@@ -18,15 +18,11 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.9"
-      - name: Populate .env file
+      - name: Populate .env file, install dependencies and execute analysis
         run: |
           echo "${{ secrets.BAM_ENV_FILE_CONTENTS }}" > ./.env
-      - name: Install dependencies
-        run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install ./core/
-      - name: Run snapshot analysis
-        run: |
           if [ ${{ github.event.inputs.dry_run }} != "" ]; then
             python -m bam_core.functions.analyze_fulfilled_requests --dry-run ${{ github.event.inputs.dry_run }} 
           else 
