change name of fx

--- a/.github/workflows/fx-analyze-fulfilled-requests.yml
+++ b/.github/workflows/fx-analyze-fulfilled-requests.yml
@@ -11,7 +11,7 @@ on:
     - cron: '0 4 * * *'  # Run every day at midnight ET
 
 jobs:
-  cron:
+  analyze_fulfilled_requests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
