--- a/core/bam_core/functions/outreach/outreach_params.yaml
+++ b/core/bam_core/functions/outreach/outreach_params.yaml
@@ -1,23 +1,22 @@
-output: "/Users/zakieh.tayyebi/Desktop/outreach_Feb6/"
+output: "/Users/zakieh.tayyebi/Desktop/outreach_Feb22/"
 
 # Filtering by expected eg distro date:
 # Note: Empty fields are always included.
-eg_distro_date: "IS_BEFORE({Expected EG Distribution Date}, DATETIME_PARSE('2/7/2025', 'MM/DD/YYYY'))" # before Feb 7
+eg_distro_date: "IS_BEFORE({Expected EG Distribution Date}, DATETIME_PARSE('2/22/2025', 'MM/DD/YYYY'))"
 
 # Filtering by last auto texted date:
 # Note: Empty fields are always included.
-auto_texted_date: "IS_BEFORE({Last Auto Texted}, DATETIME_PARSE('2/6/2025', 'MM/DD/YYYY'))" # before Feb 6
+auto_texted_date: "IS_BEFORE({Last Auto Texted}, DATETIME_PARSE('2/21/2025', 'MM/DD/YYYY'))"
 
 # Other filters with pyairtable format:
 filter_other: [
-    "NOT(FIND('A', {Cita Group}))", # filter out Cita Group A
-    "NOT(FIND('K', {Cita Group}))", # filter out Cita Group K
+    "NOT(FIND('A', {Cita Group}))", # filter out Cita Group A (food)
     "NOT(FIND('Needs Delivery', {Cita Availability}))", # filter out people requiring delivery
 ]
 
 # Languages, in order of texting:
 # Note: "Chinese" includes Cantonese, Mandarin, and Toishanese.
-languages: ["Spanish", "English"]
+languages: ["Chinese", "Spanish", "English"]
 
 # Maximum number of texts:
 # Note: By default (i.e., if this line is removed), there is no limit.
@@ -28,29 +27,20 @@ total_capacity: 300
 # Note: By default, requests are ordered by oldest first.
 items:
 -
-    name: "baby_diapers"
-    EG_item: "Pañales / Baby Diapers / 嬰兒紙尿褲"
-    sort: ["Date Submitted"]
-    capacity: 200
+    name: "baby_diapers_old"
+    EG_item: ["Pañales / Baby Diapers / 嬰兒紙尿褲"]
+    sort: ["Date Submitted"] # oldest first (default)
+    capacity: 100
 -
-    name: "clothing"
-    EG_item: "Ropa / Clothing / 服裝"
+    name: "baby_diapers_new"
+    EG_item: ["Pañales / Baby Diapers / 嬰兒紙尿褲"]
+    capacity: 50
     sort: ["-Date Submitted"] # newest first
-# -
-#     name: "baby_diapers_old"
-#     EG_item: "Pañales / Baby Diapers / 嬰兒紙尿褲"
-#     capacity: 200
-#     sort: ["Date Submitted"] # oldest first (default)
-# -
-#     name: "baby_diapers_new"
-#     EG_item: "Pañales / Baby Diapers / 嬰兒紙尿褲"
-#     capacity: 50
-#     sort: ["-Date Submitted"] # newest first
-# -
-#     name: "plates_and_cups"
-#     kitchen_items: ["Platos / Plates / 盤子", "Tazas / Cups / 杯子"]
-#     view: "Essential Goods: Plates + Cups"
-#     capacity: 100
-# -
-#     name: "clothing"
-#     EG_item: "Ropa / Clothing / 服裝"
+-
+    name: "soap_and_clothing"
+    EG_item: ["Jabón & Productos de baño / Soap & Shower Products / 肥皂和淋浴用品", "Ropa / Clothing / 服裝"]
+-
+    name: "plates_and_cups"
+    kitchen_items: ["Platos / Plates / 盤子", "Tazas / Cups / 杯子"]
+    view: "Essential Goods: Plates + Cups"
+
