--- a/.env.sample
+++ b/.env.sample
@@ -1,28 +1,23 @@
-# airtable
 BAM_AIRTABLE_TOKEN=""
-BAM_AIRTABLE_BASE_ID=""
-BAM_AIRTABLE_ASSISTANCE_REQUESTS_TABLE_ID=""
-BAM_ESSENTIAL_GOODS_DONATIONS_TABLE_ID=""
-BAM_VOLUNTEERS_TABLE_ID=""
-
-# mailjet
+BAM_AIRTABLE_BASE_ID="appEiw5APdZSlOwdm"
+BAM_AIRTABLE_V2_TOKEN=""
+BAM_AIRTABLE_V2_BASE_ID="appjIo54Z8MWrqhlI"
+BAM_AIRTABLE_V2_ASSISTANCE_REQUESTS_TABLE_ID="tbl4ZZUeYCQyUq8Xo"
+BAM_AIRTABLE_ASSISTANCE_REQUESTS_TABLE_ID="tbla854Sr0iOYyAYk"
+BAM_ESSENTIAL_GOODS_DONATIONS_TABLE_ID="tblQBK35QM6KTP5IA"
+BAM_VOLUNTEERS_TABLE_ID="tblkwwvVoKTcuLqvV"
 BAM_MAILJET_API_KEY=""
 BAM_MAILJET_API_SECRET=""
-
-# google
 BAM_GOOGLE_MAPS_API_KEY=""
-BAM_GOOGLE_SERVICE_ACCOUNT_JSON='{}'
-
-# open collective
+BAM_GOOGLE_SERVICE_ACCOUNT_JSON_BASE64=""
 BAM_OPEN_COLLECTIVE_ACCESS_TOKEN=""
-
-# s3
 BAM_DO_TOKEN=""
-BAM_S3_BASE_URL=""
-BAM_S3_ENDPOINT_URL=""
-BAM_S3_BUCKET=""
-BAM_S3_REGION_NAME=""
+BAM_S3_BASE_URL="https://nyc3.digitaloceanspaces.com"
+BAM_S3_ENDPOINT_URL="https://nyc3.digitaloceanspaces.com"
+BAM_S3_BUCKET="bam-file"
+BAM_S3_REGION_NAME="nyc3"
 BAM_S3_ACCESS_KEY_ID=""
 BAM_S3_SECRET_ACCESS_KEY=""
-BAM_S3_PLATFORM=""
+BAM_S3_PLATFORM="do"
 BAM_S3_CDN_ID=""
+BAM_SALT=""
