--- a/functions/project.yml
+++ b/functions/project.yml
@@ -76,6 +76,18 @@ packages:
           logs: 256
           memory: 1024
 
+      - name: send_dialpad_sms
+        binary: false
+        main: ""
+        runtime: "python:3.9"
+        web: true
+        parameters: {}
+        annotations: {}
+        limits:
+          timeout: 900000
+          logs: 256
+          memory: 1024
+
       - name: consolidate_eg_requests
         binary: false
         main: ""
