add env to project

--- a/functions/project.yml
+++ b/functions/project.yml
@@ -18,6 +18,8 @@ environment:
   BAM_S3_SECRET_ACCESS_KEY: ${BAM_S3_SECRET_ACCESS_KEY}
   BAM_S3_PLATFORM: "do"
   BAM_S3_CDN_ID: ${BAM_S3_CDN_ID}
+  BAM_DIALPAD_API_TOKEN: "${BAM_DIALPAD_API_TOKEN}"
+  BAM_DIALPAD_USER_ID: "${BAM_DIALPAD_USER_ID}"
 parameters: {}
 packages:
   - name: cron
