add Airtable V2 environment variables to functions config file

--- a/functions/project.yml
+++ b/functions/project.yml
@@ -2,6 +2,9 @@ environment:
   BAM_AIRTABLE_TOKEN: "${BAM_AIRTABLE_TOKEN}"
   BAM_AIRTABLE_BASE_ID: "${BAM_AIRTABLE_BASE_ID}"
   BAM_AIRTABLE_ASSISTANCE_REQUESTS_TABLE_ID: "${BAM_AIRTABLE_ASSISTANCE_REQUESTS_TABLE_ID}"
+  BAM_AIRTABLE_V2_TOKEN: "${BAM_AIRTABLE_V2_TOKEN}"
+  BAM_AIRTABLE_V2_BASE_ID: "${BAM_AIRTABLE_V2_BASE_ID}"
+  BAM_AIRTABLE_V2_ASSISTANCE_REQUESTS_TABLE_ID: "${BAM_AIRTABLE_V2_ASSISTANCE_REQUESTS_TABLE_ID}"
   BAM_ESSENTIAL_GOODS_DONATIONS_TABLE_ID: "${BAM_ESSENTIAL_GOODS_DONATIONS_TABLE_ID}"
   BAM_VOLUNTEERS_TABLE_ID: "${BAM_VOLUNTEERS_TABLE_ID}"
   BAM_MAILJET_API_KEY: "${BAM_MAILJET_API_KEY}"
